# upm

./: '  .envrc  Cargo.toml  README.md  flake.nix  x
circuit/: .gitignore  circuit.kicad_prl  circuit.kicad_pro  circuit.kicad_sch
doc/: .envrc  flake.nix  x
doc/ToP/: cfg.typ  main.typ  run  template.typ
doc/ToR/: body.typ  cfg.typ  main.typ  run  sources.yml  template.typ
doc/checks/: body.typ  main.typ  sources.yml
doc/common/: cfg.typ  template.typ
doc/desc/: body.typ  main.typ  run
doc/manual/: body.typ  main.typ
doc/note/: body.typ  main.typ  sources.yml
doc/pres/: main.typ  prelude.typ  slides.typ
doc/pres-base/: lib.typ  prelude.typ  slides.typ
doc/pres-full/: main.typ
doc/pres-handout/: main.typ
doc/pres/res/: memory.dot
upm-cli/: Cargo.toml
upm-cli/src/: io.rs  main.rs  run.rs  util.rs
upm-cli/src/cmd/: context.rs  decode_data.rs  encode_data.rs  error.rs  gen_key.rs  list_keys.rs  mod.rs  read_key.rs  remove_key.rs  send.rs  sign_data.rs  verify_data.rs  write_key.rs  write_plain.rs
upm-common/: Cargo.toml
upm-common/src/: info.rs  lib.rs  model.rs  msg.rs  req.rs  resp.rs
upm-common/src/util/: garr_cbor.rs  k256_signature_cbor.rs  k256_signing_key_cbor.rs  mod.rs
upm-device/: Cargo.toml
upm-device/.cargo/: config.toml
upm-device/src/: blink.rs  confirm_io.rs  gvec.rs  hard_fault.rs  io.rs  main.rs  panic.rs  usb.rs
upm-device/src/db/: init.rs  key_record.rs  mod.rs  plain_record.rs
upm-device/src/enc/: mod.rs  passwd_enc.rs
upm-device/src/query/: context.rs  decode_data.rs  encode_data.rs  error.rs  gen_key.rs  get_key_data.rs  get_key_meta.rs  list_keys.rs  listen.rs  mod.rs  remove_key.rs  sign_data.rs  verify_data.rs  write_key.rs  write_plain.rs
upm-device/src/util/: garr_cbor.rs  gvec.rs  logging.rs  mod.rs
upm-pc-cli/: Cargo.toml
upm-pc-cli/src/: io.rs  main.rs
