[package]
name = "upm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = { version = "0.9.2", default-features = false }
minicbor = { version = "2.2.1", default-features = false, features = [
    "minicbor-derive",
    "std"
] }
nusb = { version = "0.2.3", features = ["tokio"] }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.50.0", features = ["full"] }
upm-common.path = "../upm-common"
