[package]
name = "upm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
dialoguer = { version = "0.11.0", default-features = false, features = [
    "completion",
    "password"
] }
file_picker = "0.4.1"
heapless = { version = "0.9.2", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
minicbor = { version = "2.2.1", default-features = false, features = [
    "minicbor-derive",
    "std"
] }
nusb = { version = "0.2.3", features = ["tokio"] }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.50.0", features = ["full"] }
upm-common.path = "../upm-common"
