[package]
name = "upm-common"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["from"], default-features = false }
generic-array = "1.3.5"
heapless = { version = "0.9.2", default-features = false }
minicbor = { version = "2.2.1", default-features = false, features = ["derive"] }
minicbor-adapters = { version = "0.0.8", default-features = false }
typenum = "1.20.0"
