[package]
name = "upm-common"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = false }
derive_more = { version = "2.1.1", default-features = false, features = ["from"] }
generic-array = "1.3.5"
heapless = { version = "0.9.2", default-features = false }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
minicbor = { version = "2.2.1", default-features = false, features = ["derive"] }
minicbor-adapters = { version = "0.0.8", default-features = false }
typenum = { version = "1.20.0" }
