[package]
name = "upm-device"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = [
    "cortex-m-rt", # required by embassy
]

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.5"
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-rp = { version = "0.9.0", features = [
    "critical-section-impl",
    "rp2040",
    "time-driver",
] }
embassy-sync = { version = "0.7.2", features = ["log"] }
embassy-time = "0.5.0"
embassy-usb = "0.5.1"
embassy-usb-driver = "0.2.0"
embassy-usb-logger = "0.5.1"
generic-array = "1.3.5"
heapless = { version = "0.9.2", default-features = false }
log = { version = "0.4.29", default-features = false }
minicbor = { version = "2.2.1", default-features = false, features = ["minicbor-derive"] }
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
static_cell = "2.1.1"
thiserror = { version = "2.0.18", default-features = false }
typenum = "1.20.0"
upm-common.path = "../upm-common"
