[package]
name = "upm-device"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = [
    "cortex-m-rt", # required by embassy
]

[dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
    "heapless",
] }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.5"
ekv = { git = "https://github.com/embassy-rs/ekv", version = "1.0.0" }
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-futures = { version = "0.1.2", features = ["log"] }
embassy-rp = { version = "0.9.0", features = [
    "critical-section-impl",
    "rp2040",
    "time-driver"
] }
embassy-sync = { version = "0.7.2", features = ["log"] }
embassy-time = "0.5.0"
embassy-usb = "0.5.1"
embassy-usb-driver = "0.2.0"
embassy-usb-logger = "0.5.1"
generic-array = "1.3.5"
heapless = { version = "0.9.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
log = { version = "0.4.29", default-features = false }
minicbor = { version = "2.2.1", default-features = false, features = [
    "minicbor-derive"
] }
minicbor-adapters = { version = "0.0.8", default-features = false }
nameof = "1.3.0"
pbkdf2 = { version = "0.13.0", default-features = false, features = [
    "hmac",
    "sha2"
] }
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
rand = { version = "0.9.4", default-features = false }
rekv = { git = "https://github.com/kotfind/rekv" }
sha2 = { version = "0.11.0", default-features = false }
static_cell = "2.1.1"
thiserror = { version = "2.0.18", default-features = false }
typenum = { version = "1.20.0" }
upm-common.path = "../upm-common"
w25 = { git = "https://github.com/kotfind/w25", features = ["ekv", "log"] }
